add gadget and sink node report